--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#news">News & Updates</a></li>
+                <li><a href="#featured-organizations">Organizations</a></li>
+                <li><a href="#news-updates">News & Updates</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -44,11 +45,16 @@
                 <p>With a focus on solar, wind, and hydroelectric projects, we aim to create a future where sustainable energy is the backbone of economic and environmental growth. Through collaborations with industry leaders, educational institutions, and government bodies, we empower communities with knowledge and resources to transition towards green energy.</p>
                 <p>We also support startups and research groups by providing funding opportunities, knowledge-sharing platforms, and policy advocacy to ensure a greener and more efficient energy sector in India. Our efforts align with the global commitment to reducing carbon emissions and mitigating climate change.</p>
                 <ul>
-                    <li>🔋 Promoting clean energy projects</li>
+                    <!-- <li>🔋 Promoting clean energy projects</li>
                     <li>🌞 Advancing solar and wind energy</li>
                     <li>🌱 Supporting research in green technologies</li>
                     <li>💡 Encouraging energy efficiency initiatives</li>
-                    <li>🔄 Advocating circular economy practices</li>
+                    <li>🔄 Advocating circular economy practices</li> -->
+                    <li>Promoting clean energy projects</li>
+                    <li>Advancing solar and wind energy</li>
+                    <li>Supporting research in green technologies</li>
+                    <li>Encouraging energy efficiency initiatives</li>
+                    <li>Advocating circular economy practices</li>
                 </ul>
                 <button style="padding: 10px; background-color:aqua;border-radius:10px;">Read More</button>
             </div>
@@ -58,15 +64,20 @@
 <!-- Vision Section -->
 <section id="vision">
     <div class="vision-content">
-        <img src="assets/images/vision.jpg" alt="Vision">
+        <img class="vv" src="assets/images/vision.jpg" alt="Vision">
         <div class="vision-text">
             <h2>Vision</h2>
+            <img class="vv1" src="assets/images/vision.jpg" alt="Vision">
             <p>To make India a global leader in renewable energy by promoting sustainable practices, innovation, and policy advocacy.</p>
             <ul>
-                <li>⚡ Achieve 100% renewable energy adoption by 2050.</li>
+                <!-- <li>⚡ Achieve 100% renewable energy adoption by 2050.</li>
                 <li>🌎 Reduce India's carbon footprint by 60% in the next decade.</li>
                 <li>🏡 Promote solar-powered homes and smart energy grids.</li>
-                <li>🌿 Preserve biodiversity by reducing environmental impact.</li>
+                <li>🌿 Preserve biodiversity by reducing environmental impact.</li> -->
+                <li>- Achieve 100% renewable energy adoption by 2050.</li>
+                <li>- Reduce India's carbon footprint by 60% in the next decade.</li>
+                <li>- Promote solar-powered homes and smart energy grids.</li>
+                <li>- Preserve biodiversity by reducing environmental impact.</li>
             </ul>
         </div>
     </div>
@@ -79,10 +90,14 @@
             <h2>Mission</h2>
             <p>We are committed to driving change by implementing green initiatives, funding renewable projects, and educating communities.</p>
             <ul>
-                <li>🔋 Empowering communities with clean energy solutions.</li>
+                <!-- <li>🔋 Empowering communities with clean energy solutions.</li>
                 <li>💡 Supporting startups in the renewable sector.</li>
                 <li>📢 Spreading awareness through workshops & events.</li>
-                <li>🤝 Partnering with industries to reduce carbon footprints.</li>
+                <li>🤝 Partnering with industries to reduce carbon footprints.</li> -->
+                <li>- Empowering communities with clean energy solutions.</li>
+                <li>-  Supporting startups in the renewable sector.</li>
+                <li>- Spreading awareness through workshops & events.</li>
+                <li>- Partnering with industries to reduce carbon footprints.</li>
             </ul>
         </div>
         <img src="assets/images/mission.jpg" alt="Mission">
@@ -91,22 +106,22 @@
 
     <!-- Services Section -->
     <section id="services">
-        <h2>⚡ Our Services</h2>
+        <h2>Our Services</h2>
         <div class="services-container">
             <div class="service-box">
-                <h3>🔍 Green Energy Consulting</h3>
+                <h3><a href="gec.html"> Green Energy Consulting</a></h3>
                 <p>Expert guidance for businesses and communities on adopting renewable energy.</p>
             </div>
             <div class="service-box">
-                <h3>🌱 Sustainable Development Projects</h3>
+                <h3><a href="sdt.html">Sustainable Development Projects</a></h3>
                 <p>Helping organizations implement solar, wind, and hydroelectric projects.</p>
             </div>
             <div class="service-box">
-                <h3>📊 Research & Innovation</h3>
+                <h3><a href="research.html"> Research & Innovation</a></h3>
                 <p>Collaborating with scientists and universities to advance clean technology.</p>
             </div>
             <div class="service-box">
-                <h3>🏭 Corporate Sustainability</h3>
+                <h3><a href="corporate.html"> Sustainability</a></h3>
                 <p>Helping businesses transition to greener and more efficient practices.</p>
             </div>
         </div>
@@ -126,19 +141,19 @@
             </div>
     
             <div class="organization">
-                <a href="grid.html">
-                    <img src="images/grid.jpg" alt="G.R.I.D.">
+                <a href="https://www.powerforall.org/">
+                    <img src="assets/images/power.png" alt="Power">
                     <div class="overlay">
-                        <h3>G.R.I.D. – Affordable Energy for Rural India</h3>
+                        <h3>Power For ALL - Affordable Energy for Rural India</h3>
                     </div>
                 </a>
             </div>
     
             <div class="organization">
-                <a href="teri.html">
+                <a href="terin.html">
                     <img src="assets/images/teri.png" alt="TERI">
                     <div class="overlay">
-                        <h3>TERI – Research for a Sustainable Future</h3>
+                        <h3>TERIn - Research for a Sustainable Future</h3>
                     </div>
                 </a>
             </div>
@@ -147,7 +162,7 @@
                 <a href="ceew.html">
                     <img src="assets/ceew.png" alt="CEEW">
                     <div class="overlay">
-                        <h3>CEEW – Policy & Research for Clean Energy</h3>
+                        <h3>CEEW - Policy & Research for Clean Energy</h3>
                     </div>
                 </a>
             </div>
@@ -156,7 +171,7 @@
                 <a href="wotr.html">
                     <img src="assets/images/wotr.png" alt="WOTR">
                     <div class="overlay">
-                        <h3>WOTR – Climate Action & Energy Solutions</h3>
+                        <h3>WOTR - Climate Action & Energy Solutions</h3>
                     </div>
                 </a>
             </div>
@@ -170,20 +185,20 @@
     <h2>News and Updates</h2>
 
     <div class="news-item">
-        <img src="news-image1.jpg" alt="News 1" class="news-image">
+        <img src="assets/images/news-image1.png" alt="News 1" class="news-image">
         <div class="news-content">
             <h3>India Launches New Solar Energy Initiative</h3>
             <p>India has announced a new solar energy initiative to boost clean energy production by 30% over the next decade. This project aims to provide electricity to over 1,000 villages...</p>
-            <a href="https://www.greenenergyhub.in/india-solar-initiative" target="_blank">Read more</a>
+            <a href="https://www.tatapower.com/blogs/top-five-solar-panel-government-subsidies-to-avail-in-india" target="_blank">Read more</a>
         </div>
     </div>
 
     <div class="news-item">
-        <img src="news-image2.jpg" alt="News 2" class="news-image">
+        <img src="assets/images/news-image2.png" alt="News 2" class="news-image">
         <div class="news-content">
             <h3>Biogas Technology Transforming Rural India</h3>
             <p>A new biogas plant in rural India has successfully reduced carbon emissions while providing clean cooking fuel to hundreds of households...</p>
-            <a href="https://www.greenenergyhub.in/biogas-rural-india" target="_blank">Read more</a>
+            <a href="https://biogas-india.com/rural-employment-generation-through-biogas-production-in-villages-of-india/" target="_blank">Read more</a>
         </div>
     </div>
 
@@ -192,7 +207,7 @@
         <div class="news-content">
             <h3>Solar-Powered Water Filtration Systems Installed in Rajasthan</h3>
             <p>In Rajasthan, a new solar-powered water filtration system has been set up, providing clean drinking water to thousands of people in remote areas...</p>
-            <a href="https://www.greenenergyhub.in/solar-water-filtration-rajasthan" target="_blank">Read more</a>
+            <a href="https://rising.rajasthan.gov.in/renewable-energy" target="_blank">Read more</a>
         </div>
     </div>
 
