--- a/wotr.html
+++ b/wotr.html
@@ -166,6 +166,7 @@
             max-width: 800px;
             margin: 0 auto;
             color: #f1dede;
+            text-align:left;
         }
 
         .fragility-icons {
@@ -180,8 +181,8 @@
         }
 
         .icon-box img {
-            width: 90px;
-            height: 90px;
+            width: 75px;
+            height: 75px;
         }
 
         .fragility-section button {
