--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h2>About Us</h2>
                 <p>India's Green Energy Hub is dedicated to fostering sustainable energy solutions. We connect organizations, researchers, and policymakers to drive innovation in renewable energy. Our mission is to bridge the gap between technology, research, and implementation by promoting clean and affordable energy solutions.</p>
                 <p>With a focus on solar, wind, and hydroelectric projects, we aim to create a future where sustainable energy is the backbone of economic and environmental growth. Through collaborations with industry leaders, educational institutions, and government bodies, we empower communities with knowledge and resources to transition towards green energy.</p>
-                <p>We also support startups and research groups by providing funding opportunities, knowledge-sharing platforms, and policy advocacy to ensure a greener and more efficient energy sector in India. Our efforts align with the global commitment to reducing carbon emissions and mitigating climate change.</p>
+                <!-- <p>We also support startups and research groups by providing funding opportunities, knowledge-sharing platforms, and policy advocacy to ensure a greener and more efficient energy sector in India. Our efforts align with the global commitment to reducing carbon emissions and mitigating climate change.</p> -->
                 <ul>
                     <!-- <li>🔋 Promoting clean energy projects</li>
                     <li>🌞 Advancing solar and wind energy</li>
