--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#featured-organizations">Organizations</a></li>
                 <li><a href="#news-updates">News & Updates</a></li>
-                <li><a href="#contact">Contact</a></li>
+               <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
